      defunct: use the identical option \option{--no-lock} instead.

      \item The entry point \code{pythag} formerly in \file{Rmath.h} is
      defunct: use instead the C99 function \code{hypot}.

      \item \command{R CMD build --binary} is formally defunct:
      \command{R CMD INSTALL --build} has long been the preferred
      alternative.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Configure option \option{--with-system-zlib} now only makes
      use of the basic interface of \code{zlib} and not the
      C function \samp{gzseek} which has shown erroneous behaviour in
      \code{zlib} 1.2.4 and 1.2.5.

      The \code{zlib} in the R sources is now version 1.2.5.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{pbirthday()} and \code{qbirthday()} did not implement
      the algorithm exactly as given in their reference and so were
      unnecessarily inaccurate.
    }
  }
}

\section{CHANGES IN R VERSION 2.13.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{iconv()} no longer translates \code{NA} strings as
      \code{"NA"}.
      
      \item \code{persp(box = TRUE)} now warns if the surface extends
      outside the box (since occlusion for the box and axes is computed
      assuming the box is a bounding box). (\PR{202}.)
      
      \item \code{RShowDoc()} can now display the licences shipped with
      \R, e.g. \code{RShowDoc("GPL-3")}.

      \item New wrapper function \code{showNonASCIIfile()} in package
      \pkg{tools}.

      \item \code{nobs()} now has a \code{"mle"} method in package
      \pkg{stats4}.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Building the vignettes is now part of running \command{make}
      from an SVN checkout: a separate \command{make vignettes} is no
      longer required.

      These vignette PDFs are now made with \code{keep.source = TRUE} and
      hence will be laid out differently.
    }
  }

  \subsection{LICENCE}{